add software page
